--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 /* ==== FOOTER ==== */
 footer {
-  background: linear-gradient(135deg, #000000, #2575fc); /* Fondo degradado */
+  background: linear-gradient(135deg, #000000, #0a5aee); /* Fondo degradado */
   color: white;
   padding: 1rem 0;
   text-align: center;
